<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_bringup</name>
  <version>1.0.0</version>
  <description>
    Top-level launch package for the robot project.
    Brings up the full node graph: joy_node, teleop_node,
    arduino_driver_node, and haptics_node.
  </description>

  <maintainer email="anshul@robot.local">Anshul Tyagi</maintainer>
  <license>MIT</license>

  <exec_depend>robot_driver</exec_depend>
  <exec_depend>robot_teleop</exec_depend>
  <exec_depend>robot_haptics</exec_depend>
  <exec_depend>joy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
