<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_haptics</name>
  <version>1.0.0</version>
  <description>
    Force-feedback haptics node. Opens the Ares controller via python-evdev
    for FF_RUMBLE output only. Never reads joystick input.
    Subscribes to /haptics_cmd and plays the requested effect.
  </description>

  <maintainer email="anshul@robot.local">Anshul Tyagi</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_msgs</exec_depend>
  <exec_depend>python3-evdev</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
