<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_navigation</name>
  <version>0.1.0</version>
  <description>
    Autonomous navigation node (stub). Will contain VFH+, frontier
    exploration, and obstacle avoidance. Publishes DriveCmd with
    source=SOURCE_NAV — arduino_driver_node treats it identically to teleop.
  </description>

  <maintainer email="anshul@robot.local">Anshul Tyagi</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
