<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_recorder</name>
  <version>0.1.0</version>
  <description>
    Dedicated drive-session recorder node (stub).
    Subscribes to /drive_cmd and /arduino_status.
    Responds to /record_cmd (std_msgs/Bool) to start and stop sessions.
    Designed for higher-level, robot-aware recording separate from ros2 bag.
  </description>

  <maintainer email="anshul@robot.local">Anshul Tyagi</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
