<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_safety</name>
  <version>0.1.0</version>
  <description>
    Safety and command arbitration node (stub).
    Sits between teleop/navigation and arduino_driver_node.
    Implements watchdog timeouts, E-stop handling, and source arbitration.
    Teleop and navigation publish to /drive_cmd_raw; safety_node decides
    which command reaches /drive_cmd.
  </description>

  <maintainer email="anshul@robot.local">Anshul Tyagi</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
