<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_teleop</name>
  <version>1.0.0</version>
  <description>
    Gamepad teleop node. Converts sensor_msgs/Joy to DriveCmd and HapticCmd.
    Handles: deadman switch, acceleration ramp, precision mode, safety lock,
    mop/brush control, path recording, and path playback.
  </description>

  <maintainer email="anshul@robot.local">Anshul Tyagi</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>joy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
